Add the first change

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first git repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <h1>My first website</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam dolorem, vitae ratione fugit inventore culpa mollitia reprehenderit. Consectetur, a maxime?</p>
+    </div>
 </body>
 </html>
